# meta-package-manager

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .mailmap  .travis.yml  CHANGES.rst  CITATION.cff  MANIFEST.in  README.md  README.rst  bar-plugin.html  benchmark.html  changelog.html  changelog.md  changelog.rst  citation.cff  claude.md  cli-parameters.html  code-of-conduct.html  configuration.html  contributing.html  development.html  falsehoods.html  genindex.html  history.html  index.html  install.html  license.html  lychee.toml  meta_package_manager.7h.py  meta_package_manager.bar_plugin.html  meta_package_manager.html  meta_package_manager.managers.html  meta_package_manager.tests.html  modules.html  objects.inv  package_manager.7h.py  py-modindex.html  (+14 more)
.doctrees/: bar-plugin.doctree  benchmark.doctree  changelog.doctree  cli-parameters.doctree  code-of-conduct.doctree  configuration.doctree  contributing.doctree  development.doctree  falsehoods.doctree  history.doctree  index.doctree  install.doctree  license.doctree  meta_package_manager.bar_plugin.doctree  meta_package_manager.doctree  meta_package_manager.managers.doctree  meta_package_manager.tests.doctree  modules.doctree  tests.doctree  todolist.doctree  usecase.doctree
.doctrees/__intersphinx_cache__/: click-extra_objects.inv  click_objects.inv
.github/: .misspell-fixer.ignore  code-of-conduct.md  codecov.yaml  dependabot.yaml  generate_labels.py  labeller-file-based.yaml  labels-extra.json  labels.json  nuitka.yaml  pr_labeler.yaml  update_changelog.py  update_mailmap.py
.github/ISSUE_TEMPLATE/: BUG-REPORT.yaml  BUG-REPORT.yml  bug-report.yaml  bug-report.yml  bug_report.md  new-package-manager.yaml  new-package-manager.yml
.github/pr-templates/: update-package-spec.md
.github/workflows/: autofix.yaml  autolock.yaml  build.yaml  cancel-runs.yaml  changelog.yaml  check-guix-click.yaml  check-guix-deps.yaml  check-void-deps.yaml  choco-publish.yaml  debug.yaml  docs.yaml  explore-guix-outdated.yaml  label-sponsors.yaml  label.yaml  labeller-content-based.yaml  labeller-file-based.yaml  labels.yaml  labels_issue.yaml  labels_pr.yaml  labels_sync.yaml  lint.yaml  nix-hash.yaml  optimize-images.yaml  release.yaml  renovate.yaml  temp-yay-cooldown.yaml  tests-install.yaml  tests-yay-cooldown.yaml  tests.yaml
_modules/: index.html
_modules/meta_package_manager/: bar_plugin.html  base.html  capabilities.html  cli.html  inventory.html  labels.html  output.html  pool.html  sbom.html  specifier.html  version.html
_modules/tests/: test_docs.html
_sources/: bar-plugin.md.txt  benchmark.md.txt  changelog.md.txt  cli-parameters.md.txt  code-of-conduct.md.txt  configuration.md.txt  contributing.md.txt  development.md.txt  history.md.txt  index.md.txt  install.md.txt  license.md.txt  meta_package_manager.bar_plugin.rst.txt  meta_package_manager.managers.rst.txt  meta_package_manager.rst.txt  meta_package_manager.tests.rst.txt  tests.rst.txt  todolist.md.txt  usecase.md.txt
_static/: custom.css  documentation_options.js  pygments.css
docs/: add-new-manager.md  add-packaging-channel.md  alternatives.md  augmentations.md  bar-plugin.md  benchmark.md  benchmark.yaml  binaries.md  bitbar.rst  changelog.md  cli-help.md  cli-parameters.md  code-of-conduct.md  conf.py  configuration.md  configuration.rst  contributing.md  contributing.rst  cooldown.md  development.md  development.rst  docs_update.py  dump.md  duplicates.md  falsehoods.md  falsehoods.rst  features.md  history.md  history.rst  index.md  index.rst  install.md  install.rst  license.md  license.rst  managers.md  meta_package_manager.bar_plugin.rst  meta_package_manager.bitbar.rst  meta_package_manager.managers.md  meta_package_manager.managers.rst  (+23 more)
docs/_static/: table-crosshair.css  table-crosshair.js
docs/api/: base.rst  bitbar.rst  cli.rst  index.rst  meta_package_manager.base.rst  meta_package_manager.bitbar.meta_package_manager.7h.rst  meta_package_manager.cli.rst  meta_package_manager.platform.rst  platform.rst
docs/assets/: binaries.csv  dependencies.mmd  icon.icns  virustotal-scans.json
docs/images/: dependencies.dot  dependencies.mmd
docs/managers/: apk.md  apm.md  apt-cyg.md  apt-mint.md  apt.md  asdf.md  brew.md  cargo.md  cask.md  cave.md  choco.md  chromebrew.md  composer.md  conda.md  cpan.md  deb-get.md  dnf.md  dnf5.md  emerge.md  eopkg.md  fink.md  flatpak.md  fwupd.md  gem.md  gh-ext.md  guix.md  macports.md  mas.md  mise.md  nix.md  npm.md  opkg.md  pacaur.md  pacman.md  pacstall.md  paru.md  pip.md  pipx.md  pkcon.md  pkg-tools.md  (+32 more)
docs/templates/: footer.html
extra-labels/: mpm.toml
meta_package_manager/: __init__.py  __main__.py  apm.py  bar_plugin.py  bar_plugin_renderer.py  base.py  brewfile.py  capabilities.py  cli.py  cli_explore.py  cli_maintenance.py  cli_sbom.py  cli_snapshots.py  colorize.py  common.py  config.py  definitions.py  dispatch.py  docstring_corpus.py  duration.py  execution.py  gem.py  homebrew.py  inventory.py  labels.py  manager.py  mas.py  npm.py  output.py  package.py  pip.py  platform.py  platforms.py  pool.py  project_tools.py  runner.py  sbom.py  sbom_metadata.py  sorting.py  spdx.py  (+5 more)
package_manager/: __init__.py
tests/: cli-test-plan-config.hjson  cli-test-plan-config.json  cli-test-plan-config.json5  cli-test-plan-config.jsonc  cli-test-plan-config.toml  cli-test-plan-config.xml  cli-test-plan-config.yaml  cli-test-plan.toml  cli-test-plan.yaml  conftest.py  fake_manager.py  test_bar_plugin.py  test_brewfile.py  test_cli.py  test_cli_backup.py  test_cli_cleanup.py  test_cli_concurrency.py  test_cli_doctor.py  test_cli_dump.py  test_cli_install_remove.py  test_cli_installed.py  test_cli_managers.py  test_cli_orphans.py  test_cli_outdated.py  test_cli_restore.py  test_cli_sbom.py  test_cli_search.py  test_cli_sync.py  test_cli_upgrade.py  test_cli_which.py  test_cooldown.py  test_dispatch.py  test_docs.py  test_docstring_corpus.py  test_doctor.py  test_execution.py  test_help.py  test_manager_apt.py  test_manager_definition.py  test_manager_homebrew.py  (+18 more)
(+233 files in other folders)
