[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9" ]

[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "meta-package-manager"
version = "6.3.1.dev0"
description = "рҹҺҒ wraps all package managers with a unifying CLI"
readme = "readme.md"
keywords = [
  "apm",
  "apt",
  "apt-mint",
  "atom",
  "brew",
  "cargo",
  "cask",
  "choco",
  "chocotaley",
  "CLI",
  "cli-tools",
  "composer",
  "cpan",
  "cyclonedx",
  "deb-get",
  "dnf",
  "dnf5",
  "emerge",
  "eopkg",
  "flatpak",
  "fwupd",
  "gem",
  "homebrew",
  "mac app store",
  "macos",
  "mas",
  "meta-package-manager",
  "nix",
  "nixpkgs",
  "node",
  "npm",
  "opkg",
  "pacaur",
  "package",
  "package manager",
  "package url",
  "package-manager-cli",
  "pacman",
  "pacstall",
  "paru",
  "php composer",
  "pip",
  "pipx",
  "pkg",
  "plugin",
  "portage",
  "purl",
  "ruby",
  "ruby-gem",
  "rust",
  "sbom",
  "scoop",
  "sdkman",
  "snap",
  "spdx",
  "steamcmd",
  "stew",
  "swiftbar",
  "swiftbar-plugin",
  "uv",
  "uvx",
  "visual studio code",
  "vscode",
  "vscodium",
  "winget",
  "xbar",
  "xbar-plugin",
  "yarn",
  "yarn-berry",
  "yay",
  "yum",
  "zb",
  "zerobrew",
  "zypper",
]
license = "GPL-2.0-or-later"
license-files = [ "license" ]
authors = [ { name = "Kevin Deldycke", email = "kevin@deldycke.com" } ]
# Python versions and their status: https://devguide.python.org/versions/
requires-python = ">=3.10"
classifiers = [
  # See: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: BSD :: FreeBSD",
  "Operating System :: POSIX :: BSD :: NetBSD",
  "Operating System :: POSIX :: BSD :: OpenBSD",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
  "Typing :: Typed",
]
# Semantic versioning works in theory. In practice, it is hard to guarantee.
# That's why we rely on >= specifier instead of ~= to relax constraints. This gives more freedom to packagers to
# release hotfixes for security vulnerabilities in the future.
# See also discussion about upper limits at: https://iscinumpy.dev/post/bound-version-constraints/#tldr
# All minimal version choice are documented. Reasons to bump a minimal version are:
# - bug fixes,
# - security fixes,
# - new code path we depends on,
# - aligns minimal Python requirements to ours,
# - adds new explicit support Python version.
dependencies = [
  # backports.strenum 1.3.0 is required to support enum.StrEnum in Python 3.10.
  "backports-strenum>=1.3; python_version<'3.11'",
  # boltons 25.0.0 is the first version to support Python 3.13.
  "boltons>=25",
  # click-extra 7.11.0 adds serialize_data/print_data for structured output.
  "click-extra>=7.11.0",
  # cyclonedx-python-lib 11.2.0 is the first to support Python 3.14.
  "cyclonedx-python-lib[validation]>=11.2",
  # extra-platforms 10.0.0 drops the distro dependency.
  "extra-platforms>=10",
  # more-itertools 10.8.0 is the first to support Python 3.14.
  "more-itertools>=10.8",
  # packageurl-python 0.16.0 is the first to support Python 3.13.
  "packageurl-python>=0.16",
  # spdx-tools 0.8.2 is the first version we used to implement SPDX support.
  "spdx-tools>=0.8.2",
  # tomllib is not part of the standard library before Python 3.11. Version 2.3.0 is the first to support Python 3.14.
  "tomli>=2.3; python_version<'3.11'",
  # tomli_w 1.1.0 is the first to remove Python 3.8 support.
  "tomli-w>=1.1",
  # xmltodict 1.0.0 is just the first major release.
  "xmltodict>=1",
]

# Package referenced above and also featured in [project.optional-dependencies] or [dependency-groups]
# will be set without version specifier as they are already constrained.
[project.optional-dependencies]
toml = [ "click-extra[toml]" ]
yaml = [ "click-extra[yaml]" ]
json5 = [ "click-extra[json5]" ]
jsonc = [ "click-extra[jsonc]" ]
hjson = [ "click-extra[hjson]" ]
xml = [ "click-extra[xml]" ]

[project.scripts]
mpm = "meta_package_manager.__main__:main"
# Alias for the main entry point. So we can call `uvx meta-package-manager` directly.
meta-package-manager = "meta_package_manager.__main__:main"

[project.urls]
"Homepage" = "https://github.com/kdeldycke/meta-package-manager"
"Download" = "https://github.com/kdeldycke/meta-package-manager/releases/tag/v6.3.1.dev0"
"Changelog" = "https://github.com/kdeldycke/meta-package-manager/blob/main/changelog.md"
"Issues" = "https://github.com/kdeldycke/meta-package-manager/issues"
"Repository" = "https://github.com/kdeldycke/meta-package-manager"
"Funding" = "https://github.com/sponsors/kdeldycke"

[dependency-groups]
test = [
  "click-extra[pytest]",
  "click-extra[toml]",
  "coverage[toml]>=7.12",
  "extra-platforms",
  "pytest>=9.0.1",
  "pytest-cov>=7",
  "pytest-github-actions-annotate-failures>=0.3",
  "pytest-randomly>=4.0.1",
  "pytest-xdist[psutil]>=3.8",
  "pyyaml>=6",
]
docs = [
  "click-extra[sphinx]",
  "furo>=2025.9.25",
  "myst-parser>=4",
  "sphinx",
  # sphinx-autodoc-typehints 2.4.0 is the first version that is aligned to our Python >= 3.10 requirement.
  "sphinx-autodoc-typehints>=2.4",
  # sphinx-click 6.1.0 is the first version to drop Python 3.9.
  "sphinx-click>=6.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6",
  "sphinx-issues>=5",
  "sphinxcontrib-mermaid>=1.2.3",
  "sphinxext-opengraph>=0.13",
]
typing = [
  "types-boltons>=25.0.0.20250919",
  "types-pyyaml>=6.0.12.9",
  "types-xmltodict>=1.0.1.20250920",
]

[tool.uv]
# Cooldown period.
exclude-newer = "1 week"
exclude-newer-package = { click-extra = false }
# Package is at root level, not in "./src/".
build-backend.module-root = ""

[tool.nuitka]
product-name = "Meta Package Manager"
file-description = "рҹҺҒ wraps all package managers with a unifying CLI"
copyright = "Kevin Deldycke <kevin@deldycke.com> and contributors. Distributed under GPL-2.0-or-later license."
file-version = "6.3.1.dev0"
product-version = "6.3.1.dev0"
macos-app-icon = "docs/assets/icon.png"
linux-icon = "docs/assets/icon.png"
windows-icon-from-ico = "docs/assets/icon.png"

[tool.typos]
# Correct capitalization for proper nouns.
default.extend-identifiers = { Github = "GitHub", IOS = "iOS", Javascript = "JavaScript", MacOS = "macOS", PyPi = "PyPI", Typescript = "TypeScript" }
# Skip content between <!-- typos:off --> and <!-- typos:on --> markers.
default.extend-ignore-re = [ "(?s)<!-- typos:off -->.*?<!-- typos:on -->" ]
default.extend-ignore-identifiers-re = [
  # error: `certifi` should be `certify`, `certifies`, `certified`
  #   в•ӯв–ё ./docs/assets/dependencies.mmd:7:5
  #   в”Ӯ
  # 7 в”Ӯ     certifi["certifi\n2025.11.12"]
  #   в•°в•ҙ    в”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғ
  #
  "certifi",
  # error: `ist` should be `is`, `it`, `its`, `sit`, `list`
  #     в•ӯв–ё ./claude.md
  #     в”Ӯ
  #     в”Ӯ - [chalk.ist](https://chalk.ist)
  #     в•°в•ҙ         в”Ғв”Ғв”Ғ
  #
  "ist",
]

[tool.pytest]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
addopts = [
  "--numprocesses=auto",
  "--dist=loadgroup",
  # Limit size of the chunks of consecutive tests that xdist submits to workers.
  # Setting it to 1 will effectively mean "round-robin distribution".
  # Source: https://github.com/pytest-dev/pytest-xdist/issues/855#issuecomment-1344986156
  "--maxschedchunk=1",
  "--durations=10",
  "--cov",
  "--cov-report=term",
  # XXX --run-non-destructiveis not required as this is the default behavior.
  # We would love to add it to the command line to make sure pytest is properly recognizing it and loads our
  # customization from ``./tests/conftest.py``. But because of issue
  # https://github.com/pytest-dev/pytest/issues/9311 (see above), it is not currently present in ``addopts``.
  # "--run-non-destructive",
]
# Make sure tests that are expected to fail do not resurect and start working all of a sudden.
xfail_strict = true

[tool.coverage]
# https://coverage.readthedocs.io/en/latest/config.html
run.branch = true
run.source = [ "meta_package_manager" ]
report.precision = 2

[tool.bumpversion]
current_version = "6.3.1.dev0"
allow_dirty = true
ignore_missing_files = true
# Parse versions with an optional .devN suffix (PEP 440).
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev(?P<dev>\\d+))?"
serialize = [
  "{major}.{minor}.{patch}.dev{dev}",
  "{major}.{minor}.{patch}",
]
# When dev is "release" (its optional value), the .devN suffix is omitted.
# Bumping patch/minor/major resets dev to "0", producing X.Y.Z.dev0.
# Bumping dev goes from "0" to "release", stripping the suffix for release.
parts.dev.values = [ "0", "release" ]
parts.dev.optional_value = "release"

[[tool.bumpversion.files]]
# Update Python package version in any __init__.py file.
glob = "./**/__init__.py"
ignore_missing_version = true

[[tool.bumpversion.files]]
# Update version in [project] section.
filename = "./pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
# Update version in download URL.
filename = "./pyproject.toml"
search = "releases/tag/v{current_version}"
replace = "releases/tag/v{new_version}"

[[tool.bumpversion.files]]
# Update the version in Markdown changelog.
filename = "./changelog.md"
search = "## [`{current_version}` (unreleased)]("
replace = "## [`{new_version}` (unreleased)]("

[[tool.bumpversion.files]]
# Update the version in the citation file.
filename = "./citation.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
# Update the release date in the citation file.
filename = "./citation.cff"
regex = true
search = "date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}"
replace = "date-released: {utcnow:%Y-%m-%d}"

[tool.mypy]
check_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true
overrides = [ { ignore_missing_imports = true, module = [ "packageurl.*" ] } ]

[tool.lychee]
# ref: https://github.com/lycheeverse/lychee/blob/master/lychee.example.toml
exclude = [
  # GitHub renders issue comments with JavaScript, so the linkcheck builder cannot find them.
  "^https://github.com/.+#issuecomment-\\d+$",
  # Skip suggesting redirecting generic download links to their binary artefact.
  "^https://github.com/.+/releases/.+/download/.*$",
  # Allow redirects of generic DOI URLs to their specific Zenodo release page.
  "^https://doi.org/.+/zenodo.*$",
  # Allow redirects to the official pip documentation.
  "^https://pip.pypa.io/.*$",
]

[tool.repomatic]
exclude = [ "labels", "skills" ]
# Source paths for workflow trigger filters.
workflow.source-paths = [ "meta_package_manager" ]
# Tests install system packages (apt, brew, etc.) and need a full runner image.
test-matrix.replace.os = { "ubuntu-slim" = "ubuntu-24.04" }
# lxml cannot compile on Windows ARM64.
# See: https://bugs.launchpad.net/lxml/+bug/2004481
test-matrix.remove.os = [ "windows-11-arm" ]
test-matrix.exclude = [ { python-version = "3.15t" } ]
# Test plan for binary testing.
test-plan.file = "./tests/cli-test-plan.yaml"
# Extra label rules appended to repomatic's default labeller configurations.
labels.extra-file-rules = """"рҹ”Ң bar-plugin":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/bar_plugin/*
      - tests/*bar_plugin*

"рҹ“Ұ manager: apm":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/apm*
      - tests/*apm*

"рҹ“Ұ manager: cargo":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/cargo*
      - tests/*cargo*

"рҹ“Ұ manager: choco":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/chocolatey*
      - tests/*chocolatey*

"рҹ“Ұ manager: composer":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/composer*
      - tests/*composer*

"рҹ“Ұ manager: dnf-based":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/dnf*
      - tests/*dnf*

"рҹ“Ұ manager: dpkg-based":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/apt*
      - meta_package_manager/managers/dpkg*
      - meta_package_manager/managers/opkg*
      - tests/*apt*
      - tests/*dpkg*
      - tests/*opkg*

"рҹ“Ұ manager: emerge":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/emerge*
      - tests/*emerge*

"рҹ“Ұ manager: eopkg":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/eopkg*
      - tests/*eopkg*

"рҹ“Ұ manager: flatpak":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/flatpak*
      - tests/*flatpak*

"рҹ“Ұ manager: fwupd":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/fwupd*
      - tests/*fwupd*

"рҹ“Ұ manager: gem":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/gem*
      - tests/*gem*

"рҹ“Ұ manager: homebrew":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/homebrew*
      - tests/*homebrew*

"рҹ“Ұ manager: mas":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/mas*
      - tests/*mas*

"рҹ“Ұ manager: mpm":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/*

"рҹ“Ұ manager: nix":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/nix*
      - tests/*nix*

"рҹ“Ұ manager: npm-based":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/npm*
      - meta_package_manager/managers/yarn*
      - tests/*npm*
      - tests/*yarn*

"рҹ“Ұ manager: pacman-based":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/pacman*
      - meta_package_manager/managers/pacaur*
      - meta_package_manager/managers/paru*
      - meta_package_manager/managers/yay*
      - tests/*pacman*
      - tests/*pacaur*
      - tests/*paru*
      - tests/*yay*

"рҹ“Ұ manager: pacstall":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/pacstall*
      - tests/*pacstall*

"рҹ“Ұ manager: pip-based":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/pip*
      - tests/*pip*

"рҹ“Ұ manager: pkg":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/pkg*

"рҹ“Ұ manager: scoop":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/scoop*
      - tests/*scoop*

"рҹ“Ұ manager: sdkman":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/sdkman*
      - tests/*sdkman*

"рҹ“Ұ manager: snap":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/snap*
      - tests/*snap*

"рҹ“Ұ manager: steamcmd":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/steamcmd*
      - tests/*steamcmd*

"рҹ“Ұ manager: uv-based":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/uv*
      - tests/*uv*

"рҹ“Ұ manager: vscode-based":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/vscode*
      - tests/*vscode*

"рҹ“Ұ manager: winget":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/winget*
      - tests/*winget*

"рҹ“Ұ manager: zerobrew":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/zerobrew*
      - tests/*zerobrew*

"рҹ“Ұ manager: zypper":
  - changed-files:
    - any-glob-to-any-file:
      - meta_package_manager/managers/zypper*
      - tests/*zypper*
"""
labels.extra-content-rules = """"рҹ”Ң bar-plugin":
  - "xbar"
  - "swiftbar"
  - "plugin"

"рҹ“Ұ manager: apm":
  - "apm"
  - "atom"

"рҹ“Ұ manager: cargo":
  - "cargo"
  - "rust"
  - "crate"

"рҹ“Ұ manager: choco":
  - "choco"
  - "chocolatey"

"рҹ“Ұ manager: composer":
  - "composer"
  - "php"

"рҹ“Ұ manager: dnf-based":
  - "dnf"
  - "yum"
  - "rpm"
  - "fedora"
  - "redhat"
  - "rhel"

"рҹ“Ұ manager: dpkg-based":
  - "apt"
  - "apt-mint"
  - "aptitude"
  - "dpkg"
  - "opkg"
  - "ubuntu"
  - "debian"
  - "mint"

"рҹ“Ұ manager: emerge":
  - "emerge"
  - "portage"
  - "gentoo"

"рҹ“Ұ manager: eopkg":
  - "eopkg"
  - "solus"

"рҹ“Ұ manager: flatpak":
  - "flatpak"
  - "flat"

"рҹ“Ұ manager: fwupd":
  - "fwupd"
  - "fwupdmgr"
  - "lvfs"

"рҹ“Ұ manager: gem":
  - "gem"
  - "ruby"

"рҹ“Ұ manager: homebrew":
  - "brew"
  - "cask"
  - "homebrew"
  - "tap"
  - "formula"

"рҹ“Ұ manager: mas":
  - "mas"
  - "app store"
  - "app-store"

"рҹ“Ұ manager: nix":
  - "nix"
  - "nixpkgs"
  - "nixos"

"рҹ“Ұ manager: npm-based":
  - "npm"
  - "node"
  - "yarn"

"рҹ“Ұ manager: pacman-based":
  - "pacman"
  - "arch"
  - "pacaur"
  - "paru"
  - "yay"

"рҹ“Ұ manager: pacstall":
  - "pacstall"

"рҹ“Ұ manager: pip-based":
  - "pip"
  - "pipx"

"рҹ“Ұ manager: pkg":
  - "pkg"

"рҹ“Ұ manager: scoop":
  - "scoop"

"рҹ“Ұ manager: sdkman":
  - "sdkman"
  - "sdk man"

"рҹ“Ұ manager: snap":
  - "snap"

"рҹ“Ұ manager: steamcmd":
  - "steamcmd"
  - "steam"
  - "valve"

"рҹ“Ұ manager: uv-based":
  - "uv"
  - "uvx"

"рҹ“Ұ manager: vscode-based":
  - "vscode"
  - "vscodium"
  - "visual studio code"
  - "visual studio"

"рҹ“Ұ manager: winget":
  - "winget"

"рҹ“Ұ manager: zerobrew":
  - "zerobrew"
  - "zb"

"рҹ“Ұ manager: zypper":
  - "zypper"
  - "opensuse"
  - "suse"

"рҹ–Ҙ platform: BSD":
  - "bsd"

"рҹ–Ҙ platform: Linux":
  - "linux"

"рҹ–Ҙ platform: macOS":
  - "macos"
  - "mac os"
  - "osx"
  - "os x"
  - "apple"

"рҹ–Ҙ platform: Unix":
  - "unix"

"рҹ–Ҙ platform: Windows":
  - "windows"
  - "c:"
  - "microsoft"
"""

[tool.gitleaks]
allowlist.description = "False positives"
allowlist.commits = [
  # Old Travis CI HOMEBREW_GITHUB_API_TOKEN (revoked).
  "ee7613d49366694877177d82e207e870afb3cc1f",
  # Example brew cask output containing API_KEY="abcdef123456".
  "745247e5c74122de9ec2dd95cbd3b8510fe224d5",
  "e31111be719406940519f52c9d4406e97fb368a3",
]
